[package]
name = "nats_fabric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# crate-type = ["cdylib"]
crate-type = ["staticlib"]
panic = 'abort'

# [build]
# rustflags = "-Clink-arg=-Wl,-soname=libfoo.so.0"

[profile.release]
debug = 1
panic = 'abort'

[dependencies]
tokio = {version = "1.28.2", features = ["rt-multi-thread"]}
# async-nats = "0.29.0"
# async-nats = {git = "https://github.com/YaZasnyal/nats.rs.git", branch = "init_buffer"}
async-nats = {git = "https://github.com/nats-io/nats.rs.git", branch = "main"}
bytes = "1.4.0"
futures = "0.3.28"
crossbeam = "0.8.2"
