[package]
name = "nats_fabric"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

# [build]
# rustflags = "-Clink-arg=-Wl,-soname=libfoo.so.0"

[dependencies]
tokio = {version = "1.29.1", features = ["rt-multi-thread"]}
async-nats = "0.30.0"
# async-nats = {git = "https://github.com/YaZasnyal/nats.rs.git", branch = "init_buffer"}
# async-nats = {git = "https://github.com/nats-io/nats.rs.git", branch = "main"}
bytes = "1.4.0"
futures = "0.3.28"
crossbeam = "0.8.2"
